# working_django_rest_docker

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
blog/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blogsetup/: .ENV  .env  asgi.py  settings.py  urls.py  wsgi.py
