[tool.poetry]
name = "blogrest"
version = "0.1.0"
description = ""
authors = ["seth mcfeeters <seth.mcfeeters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
black = "^20.8b1"
flake8 = "^3.8.4"
psycopg2-binary = "^2.8.6"
simplejwt = "^2.0.1"
httpie = "^2.3.0"
djangorestframework-simplejwt = "^4.6.0"
gunicorn = "^20.0.4"
django-environ = "^0.4.5"
django-cors-headers = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
